[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/bee/bee.png" type="Texture" id=1]
[ext_resource path="res://entities/bee/bee_manager.gd" type="Script" id=2]
[ext_resource path="res://entities/bee/images/bee_2.PNG" type="Texture" id=3]
[ext_resource path="res://entities/bee/images/bee_3.PNG" type="Texture" id=4]
[ext_resource path="res://entities/bee/images/bee_1.PNG" type="Texture" id=5]
[ext_resource path="res://entities/bee/images/bee_5.PNG" type="Texture" id=6]
[ext_resource path="res://entities/bee/images/bee_4.png" type="Texture" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.9848
height = 22.9052

[sub_resource type="CircleShape2D" id=4]

[node name="BeeManager" type="Node2D"]
script = ExtResource( 2 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BeeLocator" type="PathFollow2D" parent="Path2D"]
loop = false
lookahead = 10.0

[node name="Bee" type="Sprite" parent="Path2D/BeeLocator"]
visible = false
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Path2D/BeeLocator"]
position = Vector2( -12.9783, -16.7538 )
rotation = 1.5708
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="BeeCollisionArea" type="Area2D" parent="Path2D/BeeLocator"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/BeeLocator/BeeCollisionArea"]
position = Vector2( -2.5, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="BeeCollectionArea" type="Area2D" parent="Path2D/BeeLocator"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/BeeLocator/BeeCollectionArea"]
position = Vector2( -2.5, 0 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="BeeHiveReturnArea" type="Area2D" parent="Path2D/BeeLocator"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/BeeLocator/BeeHiveReturnArea"]
position = Vector2( -2.5, 0 )
rotation = 1.5708
shape = SubResource( 4 )

[connection signal="area_entered" from="Path2D/BeeLocator/BeeCollisionArea" to="." method="_on_BeeCollisionArea_area_entered"]
[connection signal="area_entered" from="Path2D/BeeLocator/BeeCollectionArea" to="." method="_on_BeeCollectionArea_area_entered"]
[connection signal="area_entered" from="Path2D/BeeLocator/BeeHiveReturnArea" to="." method="_on_BeeHiveReturnArea_area_entered"]
